# video-server-rs_v1

./: .dockerignore  .env.bak  .env.example  .gitignore  ACCESS_CODE_DECISION_GUIDE.md  ACCESS_CODE_PREVIEW_FIX.md  ACCESS_CONTROL_PROGRESS.md  ACCESS_UI_IMPLEMENTATION_PROGRESS.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  ASKAMA_CONVERSION_SUMMARY.md  ASKAMA_MIGRATION_STATUS.md  ASKAMA_QUICK_REFERENCE.md  AUTHENTICATION_AWARE_COMPONENTS.md  BUTTON_LOCATIONS.md  CASDOOR_PARSE_ERROR_FIX.md  CASDOOR_PKCE_GUIDE.md  CASDOOR_QUICK_SETUP.md  CASDOOR_SUCCESS.md  CHANGELOG_STORAGE.md  CLAUDE.md  COMPONENT_QUICK_REFERENCE.md  Caddyfile  Cargo.toml  DATABASE_FIX_SUMMARY.md  DATABASE_MIGRATION_STATUS.md  DEMO_PAGE_SIMPLIFICATION.md  DEPENDENCIES.md  DEPLOYMENT.md  DEPLOY_GALLERY_OPTIMIZATION.md  DOCKER.md  DOCS_CLEANUP_COMPLETE.md  DOCS_REORGANIZATION_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_STRUCTURE.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  ENV_RATE_LIMITS.txt  ERROR_HANDLING_FIX.md  FINAL_STATUS.md  (+115 more)
crates/3d-gallery/: ACCESS_MODEL.md  ALL_UPDATES_COMPLETE.txt  BUILD_AND_TEST.md  Cargo.toml  DEPLOYED_READY_TO_TEST.md  DEPTH_BIAS_SOLUTION.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENTRANCE_WALL_DEBUG.md  GALLERY_LOADING_OPTIMIZATION.md  HLS_VIDEO_FIX.md  IMAGE_BLEED_THROUGH_FIX.md  IMPLEMENTATION_PLAN.md  MOBILE_VR_OPTIMIZATIONS.md  NEXT_STEPS.md  PHASE2_COMPLETE.md  PLAY_OVERLAY_FIX.md  PRODUCTION_ISSUES.md  QUICK_ACTION_CHECKLIST.md  QUICK_REFERENCE.md  QUICK_TEST.md  RATE_LIMITING_SOLUTION.md  RATE_LIMIT_QUICK_REF.md  README.md  READY_TO_TEST.md  START_HERE.md  TESTING_GUIDE.md  TEST_CHECKLIST.md  THUMBNAIL_FIX_SUMMARY.txt  THUMBNAIL_STANDARDIZATION.md  UX_FEATURES_SUMMARY.md  VIDEO_ORIENTATION_FIX.md  WALL_FIX_SUMMARY.txt  WALL_NORMAL_FIX.md  WALL_ORIENTATION_FIX.md  WALL_SPLITTING_FIX.md
crates/3d-gallery/frontend/: .gitignore  README.md  package.json
crates/3d-gallery/frontend/src/: GalleryApp.jsx
crates/3d-gallery/src/: api.rs  lib.rs  models.rs  routes.rs
crates/3d-gallery/static/: bundle.js  chunk-CJBE43P5.js  hls-TRJS5PV2.js  index.js
crates/3d-gallery/templates/: error.html  viewer.html
crates/access-codes/: Cargo.toml  askama.toml
crates/access-codes/src/: lib.rs
crates/access-codes/templates/: base.html
crates/access-control/: Cargo.toml
crates/access-control/src/: audit.rs  error.rs  lib.rs  models.rs  permissions.rs  repository.rs  service.rs
crates/access-groups/: Cargo.toml
crates/access-groups/src/: db.rs  error.rs  handlers.rs  lib.rs  models.rs  pages.rs  routes.rs
crates/agent-registry/: Cargo.toml
crates/agent-registry/src/: db.rs  hierarchy.rs  import.rs  lib.rs  models.rs  workspace_agents.rs
crates/api-keys/: Cargo.toml  askama.toml
crates/api-keys/src/: db.rs  generator.rs  lib.rs  middleware.rs  routes.rs
crates/app-runtime/: Cargo.toml
crates/app-runtime/src/: db_persist.rs  lib.rs  proxy.rs  sidecar.rs
crates/appstore/: Cargo.toml
crates/appstore/src/: app_yaml.rs  data_format.rs  lib.rs  preview.rs  registry.rs  routes.rs
crates/bpmn-viewer/: Cargo.toml
crates/bpmn-viewer/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: access_control.rs  error.rs  lib.rs  request_id.rs  storage.rs  traits.rs  types.rs
crates/common/src/db/: mod.rs  (+1 more)
crates/common/tests/: tag_tests.rs
crates/course/: Cargo.toml
crates/course/src/: lib.rs  presentation.rs  render.rs  structure.rs
crates/course/templates/: base-course.html
crates/db/: Cargo.toml
crates/db/src/: access_codes.rs  access_control.rs  access_groups.rs  agents.rs  api_keys.rs  error.rs  federation.rs  git_providers.rs  lib.rs  llm_providers.rs  media.rs  processes.rs  publications.rs  schedules.rs  user_auth.rs  vaults.rs  workspaces.rs
crates/docs-viewer/: Cargo.toml  README.md
crates/docs-viewer/src/: editor.rs  lib.rs  markdown.rs  routes.rs
crates/document-manager/: Cargo.toml
crates/document-manager/src/: lib.rs  routes.rs  storage.rs
crates/document-manager/templates/: base.html
crates/federation/: Cargo.toml  askama.toml
crates/federation/src/: cache.rs  client.rs  lib.rs  models.rs  routes.rs  server.rs
crates/git-provider/: Cargo.toml
crates/git-provider/src/: api.rs  crypto.rs  db.rs  lib.rs  routes.rs
crates/image-manager/: Cargo.toml
crates/image-manager/src/: lib.rs  media_item_impl.rs  storage.rs
crates/image-manager/templates/: base.html  index.html  unauthorized.html
crates/llm-provider/: Cargo.toml
crates/llm-provider/src/: completion.rs  crypto.rs  db.rs  lib.rs  providers.rs  routes.rs
crates/media-cli/: Cargo.toml  README.md
crates/media-cli/src/: main.rs
crates/media-core/: Cargo.toml
crates/media-core/src/: errors.rs  lib.rs  metadata.rs  storage.rs  traits.rs  upload.rs  validation.rs
crates/media-hub/: Cargo.toml  INTEGRATION.md  README.md
crates/media-hub/src/: lib.rs  models.rs  routes.rs  search.rs  templates.rs
crates/media-hub/templates/: base-tailwind.html  media_list.html  media_list_tailwind.html  media_upload.html
crates/media-manager/: Cargo.toml  askama.toml
crates/media-manager/src/: bpmn_view.rs  detail.rs  folder_access.rs  folder_renderer.rs  lib.rs  list.rs  markdown_view.rs  models.rs  pdf_thumbnail.rs  pdf_view.rs  progress.rs  routes.rs  search.rs  serve.rs  templates.rs  upload.rs
crates/media-manager/templates/: media_list_tailwind.html  media_upload.html
crates/media-mcp/: ARCHITECTURE.md  Cargo.toml  QUICKSTART.md  README.md
crates/media-mcp/src/: main.rs
crates/media-viewer/: Cargo.toml
crates/media-viewer/src/: lib.rs
crates/process-engine/: Cargo.toml
crates/process-engine/src/: agent.rs  agent_memory.rs  definition.rs  engine.rs  executor.rs  lib.rs  routes.rs  scheduler.rs  service.rs  variables.rs
crates/publications/: Cargo.toml
crates/publications/src/: db.rs  helpers.rs  lib.rs  serve.rs  slug.rs
crates/rate-limiter/: Cargo.toml
crates/rate-limiter/src/: lib.rs
crates/site-overview/: Cargo.toml
crates/site-overview/src/: handlers.rs  lib.rs
crates/tenant-admin/: Cargo.toml
crates/tenant-admin/src/: lib.rs
(+1276 files in other folders)
