[workspace]
members = [
    "crates/common",
    "crates/ui-components",
    "crates/media-core",
    "crates/access-groups",
    "crates/video-manager",
    "crates/image-manager",
    "crates/user-auth",
    "crates/access-codes",
    "crates/access-control",
    # TODO: Uncomment when implementing CLI (see MEDIA_CLI_PROGRESS.md)
    # "crates/media-cli",
]
resolver = "2"

[package]
name = "video-server-rs"
version = "0.1.0"
edition = "2021"
default-run = "video-server-rs"

[[bin]]
name = "generate-thumbnails"
path = "scripts/admin/generate_thumbnails.rs"

[dependencies]
# Local crates
common = { path = "crates/common" }
ui-components = { path = "crates/ui-components" }
access-groups = { path = "crates/access-groups" }
video-manager = { path = "crates/video-manager" }
image-manager = { path = "crates/image-manager" }
user-auth = { path = "crates/user-auth" }
access-codes = { path = "crates/access-codes" }
access-control = { path = "crates/access-control" }

# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tower-sessions = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"

# OpenTelemetry dependencies & Logging - Latest versions (0.31/0.32)
# Compatible with SigNoz and all modern OTLP collectors
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "logs", "trace"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "logs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry-appender-tracing = "0.31"


# Utilities
time = "0.3"
reqwest = { version = "0.12.28", features = ["json"] }
dotenvy = "0.15"

# Templates
askama = "0.12"
askama_axum = "0.4"

# Image processing
image = { version = "0.24", features = ["webp"] }

[workspace.dependencies]
# Shared dependencies for all crates
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tower-sessions = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio-util = { version = "0.7.17", features = ["io"] }
reqwest = { version = "0.12.28", features = ["json"] }
openidconnect = "3.5"
async-trait = "0.1"
thiserror = "1.0"
dotenvy = "0.15"
askama = "0.12"
askama_axum = "0.4"

# Image processing
image = { version = "0.24", features = ["webp"] }
