[workspace]
members = [
    "crates/common",
    "crates/media-core",
    "crates/access-groups",
    "crates/video-manager",
    "crates/media-manager",
    "crates/user-auth",
    "crates/access-codes",
    "crates/access-control",
    "crates/standalone/media-mcp",
    "crates/standalone/3d-gallery",
    "crates/api-keys", "crates/docs-viewer", "crates/vault-manager",
    "crates/rate-limiter",
    "crates/bpmn-viewer",
    "crates/pdf-viewer",
    "crates/workspace-core",
    "crates/workspace-manager",
    "crates/workspace-processors/static-site",
    "crates/workspace-processors/bpmn-simulator",
    "crates/workspace-processors/agent-collection",
    "crates/workspace-processors/course-processor",
    "crates/course",
    "crates/media-viewer",
    "crates/standalone/js-tool-viewer",
    "crates/standalone/app-publisher",
    "crates/standalone/media-cli",
    "crates/standalone/webdav",
]
resolver = "2"

[package]
name = "video-server-rs"
version = "0.1.0"
edition = "2021"
default-run = "video-server-rs"

[[bin]]
name = "generate-thumbnails"
path = "scripts/admin/generate_thumbnails.rs"

[[bin]]
name = "migrate_storage"
path = "scripts/migrate_storage.rs"

[[bin]]
name = "cleanup_missing_media"
path = "scripts/cleanup_missing_media.rs"

[dependencies]
# Local crates
common = { path = "crates/common" }
access-groups = { path = "crates/access-groups" }
video-manager = { path = "crates/video-manager" }
media-manager = { path = "crates/media-manager" }
user-auth = { path = "crates/user-auth" }
access-codes = { path = "crates/access-codes" }
access-control = { path = "crates/access-control" }
gallery3d = { path = "crates/standalone/3d-gallery" }
api-keys = { path = "crates/api-keys" }
docs-viewer = { path = "crates/docs-viewer" }
bpmn-viewer = { path = "crates/bpmn-viewer" }
pdf-viewer = { path = "crates/pdf-viewer" }
vault-manager = { path = "crates/vault-manager" }
workspace-manager = { path = "crates/workspace-manager" }
rate-limiter = { path = "crates/rate-limiter" }
course = { path = "crates/course" }
media-viewer = { path = "crates/media-viewer" }
js-tool-viewer = { path = "crates/standalone/js-tool-viewer" }
app-publisher = { path = "crates/standalone/app-publisher" }

# Web framework
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1.49", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"

# OpenTelemetry dependencies & Logging - Latest versions (0.31/0.32)
# Compatible with SigNoz and all modern OTLP collectors
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "logs", "trace"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "logs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry-appender-tracing = "0.31"


# Utilities
time = "0.3"
reqwest = { version = "0.12.28", features = ["json"] }
dotenvy = "0.15"

# Templates
askama = "0.13"

# Image processing
image = { version = "0.24", features = ["webp"] }

[dev-dependencies]
# Integration test helpers (TD-008)
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
serde_json = "1.0"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
common = { path = "crates/common" }
access-control = { path = "crates/access-control" }
media-manager = { path = "crates/media-manager" }
api-keys = { path = "crates/api-keys" }

[workspace.dependencies]
# Shared dependencies for all crates
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1.49", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
time = { version = "0.3", features = ["formatting", "parsing"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7.17", features = ["io"] }
reqwest = { version = "0.12.28", features = ["json"] }
openidconnect = "3.5"
async-trait = "0.1"
thiserror = "1.0"
dotenvy = "0.15"
askama = "0.13"
urlencoding = "2.1"
rand = "0.8"

# Image processing
image = { version = "0.24", features = ["webp"] }

[[bin]]
name = "create_default_vaults"
path = "scripts/create_default_vaults.rs"

[[bin]]
name = "find_orphan_files"
path = "scripts/maintenance/find_orphan_files.rs"
