[package]
name = "access-codes"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates
access-control = { path = "../access-control" }
common = { path = "../common" }

# Workspace dependencies
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true
sqlx.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
time.workspace = true
askama = "0.12"
askama_axum = "0.4"
