[package]
name = "access-control"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
sqlx = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1"

# Time
time = { workspace = true }

# Logging
tracing = { workspace = true }

# Internal dependencies
common = { path = "../common" }

[dev-dependencies]
tokio-test = "0.4"
