[package]
name = "access-control"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1"

# Time
time = { workspace = true }

# Logging
tracing = { workspace = true }

# Internal dependencies
common = { path = "../common" }
db = { path = "../db" }

[dev-dependencies]
sqlx = { workspace = true }
db-sqlite = { path = "../db-sqlite" }
tokio-test = "0.4"
