[package]
name = "access-groups"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
slug = "0.1"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Password hashing (for tokens)
sha2 = "0.10"
hex = "0.4"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Internal dependencies
common = { path = "../common" }
user-auth = { path = "../user-auth" }

[dev-dependencies]
tokio-test = "0.4"
