[package]
name = "access-groups"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Templating
askama = { workspace = true }
askama_axum = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
slug = "0.1"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Password hashing (for tokens)
sha2 = "0.10"
hex = "0.4"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Internal dependencies
common = { path = "../common" }
user-auth = { path = "../user-auth" }

[dev-dependencies]
tokio-test = "0.4"
