[package]
name = "agent-registry"
version = "0.1.0"
edition = "2021"
description = "Global agent definitions registry with hierarchy support"

[dependencies]
db = { path = "../db" }
agent-collection-processor = { path = "../content-processors/agent-collection" }
agent-tools = { path = "../agent-tools" }

axum          = { workspace = true }
tokio         = { workspace = true }
tower-sessions = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
askama        = { workspace = true }
tracing       = { workspace = true }
