[package]
name = "app-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
dashmap = "6"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde_yaml = "0.9"
