[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
async-trait = "0.1"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = "0.1"
axum = "0.7"
tower-sessions = "0.12"
image = { version = "0.24", features = ["jpeg", "png", "gif", "webp", "bmp"] }
kamadak-exif = "0.5"
