[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
sqlx = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-sessions = { workspace = true }
image = { version = "0.24", features = ["jpeg", "png", "gif", "webp", "bmp"] }
kamadak-exif = "0.5"
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.8"
