[package]
name = "db"
version = "0.1.0"
edition = "2021"
description = "Database domain traits — no database driver dependency"

[dependencies]
async-trait = { workspace = true }
chrono      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
