[package]
name = "document-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates
common = { path = "../common" }
access-control = { path = "../access-control" }
media-core = { path = "../media-core" }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }

# Templates
askama = { workspace = true }
askama_axum = { workspace = true }

# Database
sqlx = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
time = { workspace = true }

# Document processing
# PDF processing (optional, can be added when implementing PDF-specific features)
# pdf = "0.8"

# CSV processing
csv = "1.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
