[package]
name = "git-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { workspace = true }
tower-sessions = { workspace = true }

# Templates
askama = { workspace = true, features = ["serde_json"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Database
sqlx = { workspace = true }

# HTTP client for Forgejo/Gitea API
reqwest = { workspace = true, features = ["json"] }

# Cryptography — reuses LLM_ENCRYPTION_KEY for API token encryption
aes-gcm = "0.10"
base64 = "0.22"
rand = { workspace = true }
