[package]
name = "image-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }

# Database
sqlx = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
time = { workspace = true }
