[package]
name = "llm-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { workspace = true }
tower-sessions = { workspace = true }
tower = { workspace = true }

# Templates
askama = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Database
sqlx = { workspace = true }

# HTTP client for LLM APIs
reqwest = { workspace = true, features = ["json", "stream"] }

# Cryptography (AES-256-GCM for API key encryption)
aes-gcm = "0.10"
base64 = "0.22"
rand = { workspace = true }

# Streaming
tokio-stream = "0.1"
futures = "0.3"

# YAML parsing (workspace.yaml metadata)
serde_yaml = "0.9"
