[package]
name = "media-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates
common = { path = "../common" }
access-control = { path = "../access-control" }
media-core = { path = "../media-core" }
video-manager = { path = "../video-manager" }
image-manager = { path = "../image-manager" }
document-manager = { path = "../document-manager" }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }

# Templates
askama = { workspace = true }
askama_axum = { workspace = true }

# Database
sqlx = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
time = { workspace = true }
chrono = "0.4"

# Image processing
image = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
