[package]
name = "media-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates
common = { path = "../common" }
media-core = { path = "../media-core" }
access-control = { path = "../access-control" }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }

# Templates
askama = { workspace = true }
askama_axum = "0.4"

# Database
sqlx = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Image processing
image = "0.25"

# Utilities
mime_guess = "2.0"
tokio-util = { version = "0.7", features = ["io"] }
