[package]
name = "media-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates
common = { path = "../common" }
db = { path = "../db" }
async-trait = { workspace = true }
media-core = { path = "../media-core" }
access-control = { path = "../access-control" }
docs-viewer = { path = "../docs-viewer" }
bpmn-viewer = { path = "../bpmn-viewer" }
pdf-viewer = { path = "../pdf-viewer" }
video-manager = { path = "../video-manager" }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }

# Templates
askama = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Image processing
image = "0.25"

# Utilities
mime_guess = "2.0"
urlencoding = "2.1"
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1.11", features = ["v4"] }
dashmap = "6.1"
futures = "0.3"
