[package]
name = "media-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Media Server Team"]
description = "Model Context Protocol (MCP) server for Media Server integration with Claude Desktop"
license = "MIT OR Apache-2.0"

[[bin]]
name = "media-mcp"
path = "src/main.rs"

[dependencies]
# Local shared crates - for direct database access
common = { path = "../common" }
media-core = { path = "../media-core" }
video-manager = { path = "../video-manager" }
image-manager = { path = "../image-manager" }
document-manager = { path = "../document-manager" }
access-groups = { path = "../access-groups" }
access-control = { path = "../access-control" }

# Database - for direct SQLite access
sqlx = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Configuration
config = "0.14"
directories = "5"

# CLI parsing (for config and arguments)
clap = { version = "4", features = ["derive", "env"] }

# Time handling
time = { workspace = true }

# MCP Protocol (when available)
# mcp-sdk = "0.1"  # TODO: Add when MCP Rust SDK is available

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
