[package]
name = "publications"
version = "0.1.0"
edition = "2021"
description = "Unified publications registry for apps, courses, presentations, and collections"

[dependencies]
course        = { path = "../course" }
common        = { path = "../common" }

axum          = { workspace = true }
tokio         = { workspace = true }
tower-sessions = { workspace = true }
sqlx          = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
askama        = { workspace = true }
tracing       = { workspace = true }
urlencoding   = { workspace = true }
chrono        = { workspace = true }
image         = { workspace = true }
walkdir       = "2.5"
