[package]
name = "site-overview"
version = "0.1.0"
edition = "2021"

[dependencies]
workspace-core  = { path = "../workspace-core" }
site-generator  = { path = "../site-generator" }
axum            = { workspace = true }
askama          = { workspace = true }
async-trait     = { workspace = true }
tracing         = { workspace = true }
anyhow          = { workspace = true }
tokio           = { workspace = true }
